[package]
name = "iroh-gossip-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures-lite = "1.13"
iroh = "0.15"
iroh-gossip = "0.15"
mdns-sd = "0.10"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"


