[package]
name = "iroh-gossip-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

iroh = { version = "0.32", features = ["discovery-local-network", "discovery-pkarr-dht"] }
iroh-gossip = "0.32"

futures-lite = "2.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
anyhow = "1.0.96"

reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.15"
url = "2.2"
futures-util = "0.3"
